--- a/doks-theme/_layouts/homepage.html
+++ b/doks-theme/_layouts/homepage.html
@@ -127,11 +127,27 @@
 						</div><!-- /.col -->
 					</div><!-- /.row -->
 				</div><!-- /.container -->
-				
-				<!-- You can keep adding things here -->
 
 			</div><!-- /.section -->
 		{% endif %}
+		<div class="'section">
+		<!-- You can keep adding things here -->
+		<div class="container">
+			<div class="row justify-content-center">
+				<div class="col-md-8">
+					<div class="content">
+						{{ content }}
+					</div><!-- /.content -->
+				</div><!-- /.col -->
+				<div class="col-md-4 col-md-offset-1">
+					<div class="sections-list-wrapper">
+						<div class="sections-list js-sections js-affix js-scrollspy hidden-xs hidden-sm"></div><!-- /.sections-list -->
+					</div>
+				</div><!-- /.col -->
+			</div><!-- /.row -->
+		</div><!-- /.container -->
+
+		</div>
 		{% include site-footer.html %}
 	</body>
 </html>
