--- a/doks-theme/_layouts/homepage.html
+++ b/doks-theme/_layouts/homepage.html
@@ -131,6 +131,8 @@
 			</div><!-- /.section -->
 		{% endif %}
 
+		{% include data-model-alignment.html %}
+
 		<div class="'section main-content">
 			<!-- You can keep adding things here -->
 			<div class="container">
@@ -139,7 +141,23 @@
 						<div class="content">
 							{{ content }}
 						</div><!-- /.content -->
+
+						<div class="row">
+							<div class="col-md-6">
+								<!-- <h4>List of LLMs</h4> -->
+								<p>List of LLMs:</p>
+								<ul class="list-group" id="model_list">
+									<li class="list-group-item" id="gpt-4">GPT-4</li>
+									<li class="list-group-item" id="gpt-3.5">A second item</li>
+								  </ul>
+							</div>
+							<div class="col-md-6">
+								<div id="vis"></div>
+							</div>
+						</div>						
+		
 					</div><!-- /.col -->
+
 					<div class="col-md-2 col-md-offset-1">
 						<div class="sections-list-wrapper">
 							<div class="sections-list js-sections js-affix js-scrollspy hidden-xs hidden-sm"></div><!-- /.sections-list -->
@@ -150,5 +168,28 @@
 		</div>
 
 		{% include site-footer.html %}
+
+		<script>
+			$(document).ready(function() {
+				// Attach a click event listener to each LI element
+				$('#model_list').on('click', 'li', function() {
+					console.log($(this).text(), this.id); // Log the text content of the clicked LI element
+					// Remove the highlight class from all other list items
+					$('.list-group-item').removeClass('list-group-item-highlight');
+					// Add the highlight class to the clicked list item
+					$(this).addClass('list-group-item-highlight');
+					var clickedItemId = this.id;
+					// Call the handleItemClick function with the ID as an argument
+					chooseVegaData(clickedItemId);
+				});
+			});
+
+			// Assign the specification to a local variable vlSpec.
+			var vlSpec = vega_spyder_demo_data;
+
+			// Embed the visualization in the container with id `vis`
+			vegaEmbed('#vis', vlSpec);
+		</script>
+
 	</body>
 </html>
