--- a/doks-theme/_sass/_customized.scss
+++ b/doks-theme/_sass/_customized.scss
@@ -26,3 +26,18 @@
 .main-content {
     padding: 6.25rem 0 5rem 0;
 }
+
+.list-group-item-highlight {
+    // background-color: #f0f0f0; /* or any color you prefer */
+    font-weight: bold;
+    background-color: #0085f230;
+    border-left: 2px solid #0069c2;
+}
+
+.list-group-item {
+    cursor: pointer;
+}
+
+.list-group-item:hover {
+    font-weight: bold;
+}
