--- a/doks-theme/_layouts/homepage.html
+++ b/doks-theme/_layouts/homepage.html
@@ -137,7 +137,7 @@
 			<!-- You can keep adding things here -->
 			<div class="container">
 				<div class="row justify-content-center">
-					<div class="col-md-10">
+					<div class="col-md-11">
 						<div class="content">
 							{{ content }}
 						</div><!-- /.content -->
@@ -158,11 +158,13 @@
 		
 					</div><!-- /.col -->
 
-					<div class="col-md-2 col-md-offset-1">
+					<div class="col-md-1">
 						<div class="sections-list-wrapper">
 							<div class="sections-list js-sections js-affix js-scrollspy hidden-xs hidden-sm"></div><!-- /.sections-list -->
 						</div>
-					</div><!-- /.col -->
+					</div>
+					<!-- /.col -->
+					
 				</div><!-- /.row -->
 			</div><!-- /.container -->
 		</div>
