--- a/doks-theme/_sass/_customized.scss
+++ b/doks-theme/_sass/_customized.scss
@@ -44,6 +44,11 @@
 
 .has-border {
     background-color: #6eb7ff;
+    font-weight: 600;
+}
+
+.bold-text {
+    font-weight: 600;
 }
 
 .list-group-item, .list-group-item-highlight {
@@ -73,4 +78,8 @@
 
 .full-model-list {
     margin-top: 15px;
+}
+
+.table-striped tbody tr:nth-of-type(odd) {
+    background-color: #f5f5f5;
 }
