add links to story

--- a/doks-theme/_layouts/homepage.html
+++ b/doks-theme/_layouts/homepage.html
@@ -21,7 +21,7 @@
 					</div><!-- /.col -->
 					
 				<!-- First row of authors -->
-				<div class="row justify-content-center">
+				<div class="row justify-content-center author-section">
 					{% for author in page.authors %}
 					<div class="col-md-{{ author.column }} author_width">
 						<div class="align-container" data-mh>
@@ -40,7 +40,7 @@
 				</div><!-- /.row -->
 				
 				<!-- Second row of authors -->
-				<div class="row justify-content-center">
+				<div class="row justify-content-center author-section">
 					{% for author in page.senior_authors %}
 					<div class="col-md-{{ author.column }} author_width">
 						<div class="align-container" data-mh>
