--- a/doks-theme/_layouts/homepage.html
+++ b/doks-theme/_layouts/homepage.html
@@ -136,7 +136,7 @@
 		<div class="'section main-content">
 			<!-- You can keep adding things here -->
 			<div class="container">
-				<div class="row justify-content-center">
+				<div class="row w-full overflow-hidden">
 					<div class="col-md-11">
 						<div class="content">
 							{{ content }}
