--- a/doks-theme/_sass/components/_site-header.scss
+++ b/doks-theme/_sass/components/_site-header.scss
@@ -14,13 +14,14 @@
 /* ----- Navigation ----- */
 .site-header__logo {
 	@include link-reset;
-	display: block;
+	display: flex;
+	align-items: center;
 	float: left;
 	color: $color-dark-blue;
 	font-family: $font-family-secondary;
 	font-weight: bold;
 	font-size: 2em;
-	line-height: 5.625rem;
+	min-height: 5.625rem;
 
 	&:hover,
 	&:focus,
