solved table offset issue

--- a/doks-theme/_sass/_customized.scss
+++ b/doks-theme/_sass/_customized.scss
@@ -173,3 +173,11 @@
 .author-section {
     font-weight: 800;
 }
+
+.side-table {
+    display: inline-block; 
+
+    @media (min-width: $screen-sm-min) {
+		margin-left: 50px;
+	}
+}
