--- a/doks-theme/_sass/_customized.scss
+++ b/doks-theme/_sass/_customized.scss
@@ -177,7 +177,7 @@
 .side-table {
     display: inline-block; 
 
-    @media (min-width: $screen-sm-min) {
+    @media (min-width: $screen-sm-max) {
 		margin-left: 50px;
 	}
 }
