--- a/doks-theme/_layouts/homepage.html
+++ b/doks-theme/_layouts/homepage.html
@@ -203,12 +203,16 @@
 										</div>
 									</div>
 								</div>
-
-								<div class="col-md-5">
-									<div id="visCausal"></div>
-								</div>
-								<div class="col-md-offset-1 col-md-5">
-									<div id="visMoral"></div>
+								
+								<div class="row">
+									<div class="container">
+										<div class="col-md-6">
+											<div id="visCausal"></div>
+										</div>
+										<div class="col-md-6">
+											<div id="visMoral"></div>
+										</div>
+									</div>
 								</div>
 							</div>
 
