--- a/doks-theme/_sass/_customized.scss
+++ b/doks-theme/_sass/_customized.scss
@@ -181,3 +181,24 @@
 		margin-left: 50px;
 	}
 }
+
+.shade-row {
+    background-color: #f5f5f5;
+    font-weight: 800;
+}
+
+.more-highlight {
+    font-family: "Source Code Pro",monospace;
+    color: #c0341d;
+    background-color: #fcefed;
+    border-radius: 0.1875rem;
+    padding: 0.125rem 0.375rem 0.1875rem 0.375rem;
+}
+
+.less-highlight {
+    font-family: "Source Code Pro",monospace;
+    color: #053061;
+    background-color: #d1e5f0;
+    border-radius: 0.1875rem;
+    padding: 0.125rem 0.375rem 0.1875rem 0.375rem;
+}
